# aeri

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
cmake/: AeriOptions.cmake  AerisOptions.cmake
core/: CMakeLists.txt
core/include/aeri/core/: types.hpp
core/test/: CMakeLists.txt  sanity_check.cpp
